CSS spacing fix.

--- a/static/style.css
+++ b/static/style.css
@@ -26,7 +26,7 @@ div#header {
 
 div#container {
     line-height: 1.25;
-    margin: 0 60px 45px 60px;
+    margin: 0 60px 75px 60px;
     padding: 5px 15px 15px 15px;
     border: 1px solid #777;
     background-color: #FFF;
@@ -35,6 +35,7 @@ div#container {
 div#footer {
     position: fixed;
     width: 100%;
+    height: 45px;
     bottom: 0;
     font-size: 0.85em;
     text-align: center;
